Updated API documentation
